objects/TRIMDA__TRIMDA_Parameters__c.object
<CustomObject>
    <description>Default values for DataTrim Dupe Alerts</description>
    <fields>
        <fullName>TRIMDA__Account_DD_Trigger_Match_Level__c</fullName>
        <description>Match Level for Account Dupe-Detection (DD) upon Entry</description>
        <inlineHelpText>Match Level for Account Dupe-Detection (DD) upon Entry</inlineHelpText>
        <label>Account Dupe Detection, Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                    <default>true</default>
                    <label>Exact</label>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Account_DS_Match_Level__c</fullName>
        <description>Select Match Level to filter which Matched Records to include when presenting the Dupe Status.
Default (None), will include ALL Matched records (excluding Resolved and False dupes)</description>
        <inlineHelpText>Select Match Level to filter which Matched Records to include when presenting the Dupe Status.
Default (None), will include ALL Matched records (excluding Resolved and False dupes)</inlineHelpText>
        <label>Account Dupe Status, Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Loose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Account_Enable_DD_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable the Dupe Account Detection upon Account Entry</description>
        <inlineHelpText>Enable/Disable the Dupe Account Detection upon Account Entry</inlineHelpText>
        <label>Dupe Detection on Account Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Account_Show_ActionLink__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Control of Action links on Dupe Status for Accounts.</description>
        <inlineHelpText>Disable/Enable to Hide/Show the Merge and Convert Links on the Dupe Status component for Accounts.</inlineHelpText>
        <label>Account: Show Action Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Activity_Closed_Status__c</fullName>
        <description>By default the Activity being created will be set with Status: &apos;Completed&apos;. To change this value to another (custom) value, enter the Status here</description>
        <inlineHelpText>By default the Activity being created will be set with Status: &apos;Completed&apos;. To change this value to another (custom) value, enter the Status here</inlineHelpText>
        <label>Activity Closed Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__AddlNotification_Email_Address__c</fullName>
        <description>Additional Notification Email Address</description>
        <inlineHelpText>Additional (multiple) Notification Email Address. Separate several addresses by semi-comma (;), no spaces</inlineHelpText>
        <label>AdditionalNotification CC Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__BetaOn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/disable Beta features</description>
        <inlineHelpText>Enable/disable Beta features</inlineHelpText>
        <label>Beta On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Contact_DD_Trigger_Match_Level__c</fullName>
        <description>Match Level for Contact Dupe-Detection (DD) upon Entry</description>
        <inlineHelpText>Match Level for Contact Dupe-Detection (DD) upon Entry</inlineHelpText>
        <label>Contact Dupe Detection, Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                    <default>true</default>
                    <label>Exact</label>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Contact_DS_Match_Level__c</fullName>
        <description>Select Match Level to filter which Matched Records to include when presenting the Dupe Status.
Default (None), will include ALL Matched records (excluding Resolved and False dupes)</description>
        <inlineHelpText>Select Match Level to filter which Matched Records to include when presenting the Dupe Status.
Default (None), will include ALL Matched records (excluding Resolved and False dupes)</inlineHelpText>
        <label>Contact Dupe Status, Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Loose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Contact_Enable_DD_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable the Dupe Contact Detection upon Contact Entry</description>
        <inlineHelpText>Enable/Disable the Dupe Contact Detection upon Contact Entry</inlineHelpText>
        <label>Dupe Detection on Contact Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Contact_Show_ActionLink__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Control of Action links on Dupe Status for Contacts.</description>
        <inlineHelpText>Disable/Enable to Hide/Show the Merge and Convert Links on the Dupe Status component for Contacts.</inlineHelpText>
        <label>Contact, Show Action Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__ConvStatus__c</fullName>
        <defaultValue>&quot;Qualified&quot;</defaultValue>
        <inlineHelpText>Set the Default Converted Status for the Lead when converted. Check the Lead Status field for details. (Default: Qualified)</inlineHelpText>
        <label>Converted Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Convert_Batch_Size_Max__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Mass Convert Batch Size (Max.)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Default_isDTMergeWizard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>(Lightning Only) This value defines which of the 2 merge options (Merge Wizard or Quick Merge) is displayed as default on the VF Page: Merge Wizard List</description>
        <inlineHelpText>(Lightning Only) Set the DataTrim Merge Wizard as the default Merge option, if unchecked, the DataTrim Quick Merge Featuer will display.</inlineHelpText>
        <label>Use Merge Wizard as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Default_isQMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Classic Only) This value defines which of the 2 merge options (Merge wizard or Quick Merge)  is displayed as default on the VF Page: Merge Wizard List</description>
        <inlineHelpText>(Classic Only) Set the DataTrim Quick Merge Wizard as the default Merge option (over the std.salesforce merge Wizard).
Note if you have enabled clickjack protection the Quick Merge automatically becomes the default merge option regardless of this setting</inlineHelpText>
        <label>Use Quick Merge as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__DeleteMRAfterConvert__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When a mass convert is succesfully completed, shall the Matched Record be deleted?</inlineHelpText>
        <label>Delete Matched Records After Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__DeleteMRAfterMerge__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When a mass merge is succesfully completed, shall the Matched record be deleted?</inlineHelpText>
        <label>Delete Matched Records After Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Enable_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates the possibility to merge records in Batch mode. Batch Mode will automatically be imposed if the selected number of records is higher than the value set in &apos;Mass Merge Batch Size (Max.)&apos;</description>
        <inlineHelpText>Activates the possibility to merge records in Batch mode. Batch Mode will automatically be imposed if the selected number of records is higher than the value set in &apos;Mass Merge Batch Size (Max.)&apos;</inlineHelpText>
        <label>Enable Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Enable_clickjack_protection_Visualforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ClickJack protection (visualforce pages) will disable the use of iframes (mash-up) for the DataTrim Quick Merge, salesforce Merge Wizard, and the detail views in the Review Wizard
OBS: The setting here should correspond to the setting in your Session Settings (salesforce setup) under: Enable clickjack protection for non-setup customer Visualforce pages.</description>
        <inlineHelpText>The setting here should correspond to the setting in your Session Settings (salesforce setup) under: Enable clickjack protection for non-setup customer Visualforce pages.
By enabeling this, The Merge Wizards will all open in new windows/tabs</inlineHelpText>
        <label>Enable clickjack protection-Visualforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Enable_clickjack_protection__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ClickJack protection (salesforce pages) will disable the use of iframes (mash-up) for the salesforce merge wizard, and the detail views in the Review Wizard
By enabeling this, the DataTrim Quick Merge will become your default merge wizard
OBS: The setting here should correspond to the setting in your Session Settings (salesforce setup) under: Enable clickjack protection for non-setup Salesforce page.</description>
        <inlineHelpText>The setting here should correspond to the setting in your Session Settings (salesforce setup) under: Enable clickjack protection for non-setup Salesforce page.
By enabeling this, the DataTrim Quick Merge will become your default merge wizard</inlineHelpText>
        <label>Enable clickjack protection-salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Enhanced_Display_DupeStatusAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Control which Dupes to include in list.
Enable/Disable to Include/Exclude Leads which are duplicates of the Account (Lead-Accounts)</description>
        <inlineHelpText>Enable/Disable to Include/Exclude Leads which are duplicates of the Account (Lead-Accounts)</inlineHelpText>
        <label>Account: Include Leads to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Enhanced_Display_DupeStatusContact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Control which Dupes to include in list.
Enable/Disable to Include/Exclude Leads which are duplicates of the Account (Lead-Contacts)</description>
        <inlineHelpText>Enable/Disable to Include/Exclude Leads which are duplicates of the Account (Lead-Contacts)</inlineHelpText>
        <label>Contact: Include Leads to Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Hide_Console__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow you to hide/show the inline Console on the DataTrim Dupe Alerts Tab</description>
        <inlineHelpText>Allow you to hide/show the inline Console on the DataTrim Dupe Alerts Tab</inlineHelpText>
        <label>Hide Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Lead_DD_Trigger_Match_Level__c</fullName>
        <description>Match Level for Lead Dupe-Detection (DD) upon Entry</description>
        <inlineHelpText>Match Level for Lead Dupe-Detection (DD) upon Entry</inlineHelpText>
        <label>Lead Dupe Detection, Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                    <default>true</default>
                    <label>Exact</label>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Lead_DS_Match_Level__c</fullName>
        <description>Select Match Level to filter which Matched Records to include when presenting the Dupe Status.
Default (None), will include ALL Matched records (excluding Resolved and False dupes)</description>
        <inlineHelpText>Select Match Level to filter which Matched Records to include when presenting the Dupe Status.
Default (None), will include ALL Matched records (excluding Resolved and False dupes)</inlineHelpText>
        <label>Lead Dupe Status, Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Loose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Lead_Enable_DD_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/Disable the Dupe Lead Detection upon Lead Entry</description>
        <inlineHelpText>Enable/Disable the Dupe Lead Detection upon Lead Entry</inlineHelpText>
        <label>Dupe Detection on Lead Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Lead_Show_ActionLink__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Control of Action links on Dupe Status for Leads.</description>
        <inlineHelpText>Disable/Enable to Hide/Show the Merge and Convert Links on the Dupe Status component for Leads.</inlineHelpText>
        <label>Lead, Show Action Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__LicenseNo__c</fullName>
        <defaultValue>&quot;000000000000000000&quot;</defaultValue>
        <description>License number, Default number &quot;000000000000000000&quot; is for Trial license, which limits the number of records to be matched</description>
        <label>License No</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__License_Type__c</fullName>
        <formula>CASE(LEFT(TRIMDA__LicenseNo__c,2),
&quot;00&quot;,&quot;Trial&quot;, 
&quot;33&quot;,&quot;Basic&quot;, 
&quot;11&quot;,&quot;Standard&quot;, 
&quot;22&quot;,&quot;Enterprise&quot;, 
&quot;99&quot;,&quot;Custom&quot;,
&quot;Unknown License Type&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeAddNote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to insert Merged data as a Note which is attacehd to the surviving record</inlineHelpText>
        <label>Add Merged data as Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeAppend2Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to allow the merged data to be appended to a field on the surviving record</inlineHelpText>
        <label>Append Merge Data to a Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeAppendField__c</fullName>
        <defaultValue>&quot;Description&quot;</defaultValue>
        <inlineHelpText>Default field to use when appending merged data to a field on the surviving record</inlineHelpText>
        <label>Merge Append Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeCreateActivity__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable to insert Merged data as an Activity which is attacehd to the surviving record</inlineHelpText>
        <label>Create Activity for Merged Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeExclFields_Acc__c</fullName>
        <description>List of fields to exclude during the merge of two account records</description>
        <label>Merge Field Exclusions (Account)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeExclFields_Con__c</fullName>
        <description>List of fields to exclude during the merge of two contact records</description>
        <label>Merge Field Exclusions (Contact)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeExclFields_Lead__c</fullName>
        <description>List of fields to exclude during the merge of two lead records</description>
        <label>Merge Field Exclusions (Lead)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeMultiPickLists__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled, multi pick lists are consolidated during merge</inlineHelpText>
        <label>Merge Multi Pick-lists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeRules_Acc__c</fullName>
        <description>Advanced Merge Options/Rules for Merging Accounts.
Please consult the User Guide for further details</description>
        <inlineHelpText>Advanced Merge Options/Rules for Merging Accounts.
Please consult the User Guide for further details</inlineHelpText>
        <label>Merge Rules (Account)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeRules_Con__c</fullName>
        <description>Advanced Merge Options/Rules for Merging Contacts.
Please consult the User Guide for further details</description>
        <inlineHelpText>Advanced Merge Options/Rules for Merging Contacts.
Please consult the User Guide for further details</inlineHelpText>
        <label>Merge Rules (Contact)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MergeRules_Lead__c</fullName>
        <description>Advanced Merge Options/Rules for Merging Leads
Please consult the User Guide for further details</description>
        <inlineHelpText>Advanced Merge Options/Rules for Merging Leads
Please consult the User Guide for further details</inlineHelpText>
        <label>Merge Rules (Lead)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Merge_Batch_Size_Max__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Mass Merge Batch Size (Max.)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Merge_Type__c</fullName>
        <inlineHelpText>Default direction of Mass Merge</inlineHelpText>
        <label>Merge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2Survivor</fullName>
                    <default>true</default>
                    <label>2Survivor</label>
                </value>
                <value>
                    <fullName>2Dupe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Notification_Email_Address__c</fullName>
        <description>Enter the Email Address to which the Notification Email is sent.
If left blank the Notification Email is sent to the Alert Owner (Default)</description>
        <inlineHelpText>Enter the Email Address to which the Notification Email is sent.
If left blank the Notification Email is sent to the Alert Owner (Default)</inlineHelpText>
        <label>Notification Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TRIMDA__OnBoarding_Option__c</fullName>
        <description>In order for DataTrim to perform the de-duplication of your data you must grant us access
to it.
Alternative 1 is the optimal solution, as it gives less implication while delivering the service to
you. We and our solution will be able to reset the password when it expires, and you can
setup a specific profile for this user, limiting the DataTrim user to having access to the
relevant data only.
Alternative 2 however, has the benefit of saving you from buying another license from
salesforce, but we would have to manually go through the OnBoarding process each time the
user changes the password.</description>
        <label>OnBoarding Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Using a Specific DataTrim user</fullName>
                </value>
                <value>
                    <fullName>Reusing an existing salesforce License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__OpptyName__c</fullName>
        <inlineHelpText>Select the naming convention to be used when Creating and Naming Opportunities (Default: New)</inlineHelpText>
        <label>Oppty. Naming Convention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Account Name - New</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Account Name, Contact Name - New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Owner_of_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature allowing the owner of the created Activity to be a User different from the current user.
If the field is blank, or if the selected user is inactive, the current user will become the owner of the created Activity</description>
        <inlineHelpText>Leave blank to make the current user the owner of the created Activity, or select a default owner</inlineHelpText>
        <label>Default Owner of Activity</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataTrim_Dupe_Alerts_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Owner_of_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature allowing the owner of the created Note to be a User different from the current user.
If the field is blank, or if the selected user is inactive, the current user will become the owner of the created Note</description>
        <inlineHelpText>Leave blank to make the current user the owner of the created Note, or select a default owner</inlineHelpText>
        <label>Default Owner of Note</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataTrim_Dupe_Alerts_Parameters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SOQL_Count_Query__c</fullName>
        <defaultValue>20000</defaultValue>
        <label>SOQL Count Query (Max.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Send_Notification_on_Complete__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable/disable to have an Email sent automatically when the deduplications are completed.</description>
        <inlineHelpText>Enable/disable to have an Email sent automatically when the deduplications are completed.</inlineHelpText>
        <label>Send Notification on Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__ServerURL__c</fullName>
        <formula>LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25, 9) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServerURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Account_Facebook__c</fullName>
        <description>API field reference for Facebook field on Accounts</description>
        <inlineHelpText>API field reference for Facebook field on Accounts</inlineHelpText>
        <label>Account: Facebook</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Account_GooglePlus__c</fullName>
        <description>API field reference for Google+ field on Accounts</description>
        <inlineHelpText>API field reference for Google+ field on Accounts</inlineHelpText>
        <label>Account: Google+</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Account_LinkedIn__c</fullName>
        <description>API field reference for LinkedIn field on Accounts</description>
        <inlineHelpText>API field reference for LinkedIn field on Accounts</inlineHelpText>
        <label>Account: LinkedIn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Account_Twitter__c</fullName>
        <description>API field reference for Twitter field on Accounts</description>
        <inlineHelpText>API field reference for Twitter field on Accounts</inlineHelpText>
        <label>Account: Twitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Contact_Facebook__c</fullName>
        <description>API field reference for Facebook field on Contacts</description>
        <inlineHelpText>API field reference for Facebook field on Contacts</inlineHelpText>
        <label>Contact: Facebook</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Contact_GooglePlus__c</fullName>
        <description>API field reference for Google+ field on Contacts</description>
        <inlineHelpText>API field reference for Google+ field on Contacts</inlineHelpText>
        <label>Contact: Google+</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Contact_LinkedIn__c</fullName>
        <description>API field reference for LinkedIn field on Contacts</description>
        <inlineHelpText>API field reference for LinkedIn field on Contacts</inlineHelpText>
        <label>Contact: LinkedIn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Contact_Twitter__c</fullName>
        <description>API field reference for Twitter field on Contacts</description>
        <inlineHelpText>API field reference for Twitter field on Contacts</inlineHelpText>
        <label>Contact: Twitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Lead_Facebook__c</fullName>
        <description>API field reference for Facebook field on Leads</description>
        <inlineHelpText>API field reference for Facebook field on Leads</inlineHelpText>
        <label>Lead: Facebook</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Lead_GooglePlus__c</fullName>
        <description>API field reference for Google+ field on Leads</description>
        <inlineHelpText>API field reference for Google+ field on Leads</inlineHelpText>
        <label>Lead: Google+</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Lead_LinkedIn__c</fullName>
        <description>API field reference for LinkedIn field on Leads</description>
        <inlineHelpText>API field reference for LinkedIn field on Leads</inlineHelpText>
        <label>Lead: LinkedIn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SocialCRM_Lead_Twitter__c</fullName>
        <description>API field reference for Twitter field on Leads</description>
        <inlineHelpText>API field reference for Twitter field on Leads</inlineHelpText>
        <label>Lead: Twitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__donotCreateOppty__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable to prevent an Opportunity to be create for each converted Lead. Disable to create the opportunities.</inlineHelpText>
        <label>Do Not Create opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__overwriteLeadSource__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to overwrite the contaacts Lead source with the value from the Lead (Default: UnChecked))</inlineHelpText>
        <label>Overwrite Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__sendNoti__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to send an Email notification to the Owner (Default: UnChecked)</inlineHelpText>
        <label>Send Notification to Owner</label>
        <type>Checkbox</type>
    </fields>
    <label>DataTrim Dupe Alerts Parameters</label>
    <listViews>
        <fullName>TRIMDA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Setup Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataTrim Dupe Alerts Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TRIMDA__License_No_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(TRIMDA__LicenseNo__c)  != 18</errorConditionFormula>
        <errorDisplayField>TRIMDA__LicenseNo__c</errorDisplayField>
        <errorMessage>Invalid License Number, enter your License number, or contact DataTrim to get registered.</errorMessage>
    </validationRules>
</CustomObject>